tests/paczka1/fuzzy1/58132096.err
Error in line 18: S409 S409 90,0
Error in line 35: NG8v47 S470 -1,1
